fix badge text alignment issue

--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -73,7 +73,7 @@ body {
 }
 
 .badge {
-  @extend .row;
+  display: flex;
   p {
     color: $grey-text;
     font-weight: 400;
